1.3-29

* `gamm' now silently drops grouping factors within the correlation 
   structure formulae that duplicate random effects grouping factors 
   (which automatically act as grouping factors on the correlation 
   structures anyway).

* Some replacement of dubious `as.matrix' calls with use of `,drop=FALSE]' 
  in gamm.r   

1.3-28

* `gamm' modified to call a routine `gammPQL' in place of MASS::glmmPQL. 
  This avoids some duplication, and facilitates maintainance. 

* Bug fix in `formXtViX' where matrix dimensions got dropped when 
  subsetting thereby messing up variance calculations for gamm fits in 
  which some group sizes were 1. 

1.3-27

* Fix of nasty bug in large dataset handling with "tp" basis (introduced 
  in 1.3-26). Subsampling code was re-seeding RNG instead of intended 
  behaviour of saving RNG state and  restoring it. Fixed and tested.

1.3-26

* modification to `gam' so that GCV/UBRE scores reported with all fixed 
  smoothing parameters are consistent with equivalent under s.p. 
  estimation.

* gam.fit3 modified to test for convergence of coefficients as well
  as penalized deviance, otherwise in extreme cases the derivative 
  iterations can diverge.

* modifications of gam.setup, predict.gam and plot.gam to allow smooths
  to contribute an offset term to the model (offset is returned from 
  smooth.construct or Predict.matrix as an "offset" attribute of 
  model/prediction matrix). This is useful for smooths which have known 
  boundary conditions of some sort.

* PredictMat can now handle NAs in a returned prediction matrix.
 
* vis.gam can handle NA's in predictions.

* Modification of large dataset handling for "tp" and "ts" bases. If there
  are more that 3000 unique covariate combinations for a tprs then 3000 
  combinations are randomly sub-sampled, and used as the initial knots for 
  tprs basis construction. The same random number seed is used every time, 